# svepa_event

./: .gitignore  README.md  pyproject.toml
src/svepa_event/: __init__.py  helpers.py  svepa_event.py  svepa_export_file.py  svepa_info.py
src/svepa_event/DATA_FILES/: svepa_info.pickle  svepa_info.yaml
